--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rgb(108,233,38);
-    background: radial-gradient(circle, rgba(108,233,38,1) 0%, #162938 100%);
+    /* background: rgb(108,233,38); */
+    /* background: radial-gradient(circle, rgba(108,233,38,1) 0%, #162938 100%); */
+    background-image: url("images/hh.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
