--- a/style.css
+++ b/style.css
@@ -12,10 +12,8 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    /* background: rgb(108,233,38); */
-    /* background: radial-gradient(circle, rgba(108,233,38,1) 0%, #162938 100%); */
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4Z6qoBEIPR5NtnXVPqSf-Z_fvlb5dOdje_w&s");
-    background-repeat: no-repeat;
+    background: rgb(228,251,63);
+    background: radial-gradient(circle, rgba(228,251,63,1) 0%, rgba(231,91,89,1) 14%, rgba(9,129,212,1) 100%);
     background-size: cover;
     background-position: center;
 }
