--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: rgb(228,251,63);
-    background: radial-gradient(circle, rgba(228,251,63,1) 0%, rgba(231,91,89,1) 14%, rgba(9,129,212,1) 100%);
+    background: url("images/aura.jpg");
     background-size: cover;
     background-position: center;
 }
